--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,6 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    // needed for the Places Search feature
+    implementation 'com.google.android.libraries.places:places:2.2.0'
 }
